fix: Broken header in public Help Center portal (#11704)
Fixes https://linear.app/chatwoot/issue/CW-4473/broken-header-in-help-center-portal

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -288,6 +288,7 @@ en:
       made_with: Made with
     header:
       go_to_homepage: Website
+      visit_website: Visit website
       appearance:
         system: System
         light: Light
