fix: missing metrics and labels from label summary (#11718)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -105,6 +105,8 @@ en:
       conversations_count: No. of conversations
       avg_first_response_time: Avg first response time
       avg_resolution_time: Avg resolution time
+      avg_reply_time: Avg reply time
+      resolution_count: Resolution Count
     team_csv:
       team_name: Team name
       conversations_count: Conversations count
